--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
         <script id="index.js"></script>
+        <h1>This is the smile of the entire application, we are looking forward to coding along with you!</h1>
 </body>
 
 </html>
